--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   supabase_flutter: ^2.0.0
   google_sign_in: ^6.2.1
+  carousel_slider: ^4.2.1
+  glass: ^1.0.2+1
 
 dev_dependencies:
   flutter_test:
