--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^6.2.1
   carousel_slider: ^4.2.1
   glass: ^1.0.2+1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
