Created User model and store user into supabase table

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   line_awesome_flutter: ^2.0.0
   animated_theme_switcher: ^2.0.10
   image_picker: ^0.8.4+4
+  image_cropper: ^5.0.0
   path_provider: ^2.1.2
 
 dev_dependencies:
