--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   line_awesome_flutter: ^2.0.0
   image_picker: ^0.8.4+4
   image_cropper: ^5.0.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
