--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.4+4
   image_cropper: ^5.0.0
   google_fonts: ^6.1.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
