--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_cropper: ^5.0.0
   google_fonts: ^6.1.0
   shared_preferences: ^2.0.6
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
